--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>某简历</title>
+    <title>LY1uN</title>
     <!-- CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/blog.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     </div>
 	<div class="intr">
     	<span class="avtar"></span>
-        <p class="peointr">我叫孙笑笑，一名计算机专业大三的学生。</p>
+        <p class="peointr">我叫林赟，一名研三的学生。</p>
         <p class="peointr">爱生活，爱旅行，爱技术。</p>
     </div>
     <div class="title" id="part1">爱生活</div>
